--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number" id="principal"> <br />
+        Amount <input type="number" id="principal">
+        <br>
+        <br>
         Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="updateRate()"><span
-            id="rate_val">10.25%</span> <br />
+            id="rate_val">10.25%</span>
+        <br>
+        <br>
         No. of Years <select id="years">
             <option value="1">1</option>
             <option value="2">2</option>
@@ -26,10 +30,11 @@
             <option value="9">9</option>
             <option value="10">10</option>
 
-        </select> <br />
-        Interest : <span id="result"></span><br>
-
+        </select>
+        <br>
+        <br>
         <button onclick="compute()">Compute Interest</button>
+        <br>
         <span id="result"></span>
         <footer>
             &#169; This Calculator belongs to Mark
